--- a/SistemaBackend/package.json
+++ b/SistemaBackend/package.json
@@ -14,7 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "i2c-bus": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
+    "moment": "^2.30.1",
+    "mysql": "^2.18.1",
+    "onoff": "^6.0.3",
+    "sleep": "^6.3.0"
   }
 }
